# quadipy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.circleci/: config.yml
docs/: index.md  reference.md
docs/tutorials/: basic.md  graph.md
examples/: bad_config.json  dynamic_graph_example.json  simple.json
quadipy/: __init__.py  cli.py
quadipy/schemas/: __init__.py  graph_format_config.py  predicate_mapping.py  quad.py
tests/schemas/: test_graph_format_config.py  test_predicate_mapping.py  test_quad.py
